--- a/yeonsonam/templates/yeonsonam/drama_list.html
+++ b/yeonsonam/templates/yeonsonam/drama_list.html
@@ -1,5 +1,7 @@
 {% for drama in drama_list %}
 
-	{{drama.title}}
+	{{drama.field1}}</br>
+	{{drama.field2}}</br>
+	<img src="{{drama.field6}}" width="150">
 
 {% endfor %}
