--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,7 @@
+body {
+   margin:0;
+}
+
 #navigation {
    background-color: white;
    margin-bottom: 0;
@@ -25,9 +29,9 @@
 
 .profile_photo{
    vertical-align: top;
-   width: 40px;
-   height: 40px;
-   border-radius: 20px;
+   width: 43px;
+   height: 43px;
+   border-radius: 22px;
 }
 
 .nav_dropdown{
@@ -36,17 +40,36 @@
 
 
 .dropdown {
-    position: relative;
-    display: inline-block;
+   position: relative;
+   display: inline-block;
+}
+.dropdown-ul {
+   list-style-type: none;
+   margin:0;
+   padding:0;
+   border-radius:20px;
+}
+
+.dropdown-ul li:first-child{
+   border-top-right-radius: 20px !important;
+   border-top-left-radius: 20px !important;
+   overflow: hidden;
+}
+.dropdown-ul li:last-child{
+   border-top-right-radius: 10px !important;
+   border-top-left-radius: 10px !important;
+   overflow: hidden;
+
 }
 
 .dropdown-content {
-    display: none;
-    position: absolute;
-    right: 0;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   border-radius:10px;
+   display: none;
+   position: absolute;
+   right: 0;
+   background-color: #f9f9f9;
+   min-width: 160px;
+   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
@@ -77,7 +100,7 @@
    display: block;
    color: black;
    text-align: center;
-   padding: 14px 16px;
+   padding: 12px 16px;
    text-decoration: none;
    font-size: 17px;
 }
@@ -93,7 +116,7 @@
 /*section*/
 
 #section1 {
-   background-color: #f0f0f0;
+   background-color: #ffffff;
    padding-top: 20px;
    padding-bottom: 30px;
    left:0;
