--- a/tapas1/templates/base2.html
+++ b/tapas1/templates/base2.html
@@ -12,7 +12,7 @@
 
    <script src="{% static 'js/base.js' %}"></script>
 
-   <link href="{% static "css/accounts.css" %}?ver=1.1" rel="stylesheet">
+   <link href="{% static "css/accounts.css" %}?ver=1.11" rel="stylesheet">
 
    <link href="{%static "css/base.css" %}" rel="stylesheet">
 
@@ -24,20 +24,23 @@
     <div id="navigation">
       <div id="nav_group">
       <a href="{% url 'yeonsonam:drama_list' %}" class="nav_logo" >연소남</a>
+
       {% if request.user.is_authenticated %}
       <div class="right nav_dropdown">
+        <a href="#" class="nav_a">공지사항</a>
+
         {% if request.user.profile.image %}
         <img src="{{ request.user.profile.image.url }}" class="profile_photo">
         {% else %}
           <img src="{% static "accounts/no_profile_photo.png" %}" class="profile_photo">
         {% endif %}
-        <div class="dropdown">
 
-          <a href="{% url "accounts:profile_detail" %}" class="dropbtn nav_a">{{ request.user.profile.nickname }}</a>
+        <div class="dropdown">
+          <a href="{% url "accounts:profile_detail" %}" class="nav_a">{{ request.user.profile.nickname }}</a>
           <div class="dropdown-content">
-            <a href="{% url 'account_logout' %}">로그아웃</a>
-            <a href="{% url 'accounts:profile_detail' %}">프로필</a>
-            <a href="#">Link 3</a>
+                <a href="{% url 'account_logout' %}">로그아웃</a>
+                <a href="{% url 'accounts:profile_detail' %}">프로필</a>
+                <a href="#">Link 3</a>
           </div>
         </div>
       </div>
