--- a/yeonsonam/templates/yeonsonam/drama_detail.html
+++ b/yeonsonam/templates/yeonsonam/drama_detail.html
@@ -1,3 +1,24 @@
 
     
 
+<p>{{drama.title}}</p>
+<p><img src="{{drama.poster}}"></p>
+<p>{{drama.genre}}</p>
+<p>{{drama.start}}</p>
+<p>{{drama.end}}</p>
+<p>{{drama.state}}</p>
+<p>{{drama.cast}}</p>
+<p>{{drama.crew}}</p>
+<p>{{drama.runtime}}</p>
+<p>{{drama.price}}</p>
+<p>{{drama.summary}}</p>
+<p>{{drama.time}}</p>
+<p><img src="{{drama.styurl}}"></p>
+{{drama.styurl}}
+
+
+{% for i in drama.styurl %}
+
+
+
+{% endfor %}
