--- a/notice/templates/notice/notice_list.html
+++ b/notice/templates/notice/notice_list.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block style_css %}
-<link href="{%static "css/notice.css" %}?ver=1.00" rel="stylesheet">
+<link href="{%static "css/notice.css" %}?ver=1.03" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
@@ -18,7 +18,7 @@
     {% for notice in notices %}
     <li class="notice_list">
         <span class="number">{{ notice.pk }}</span>
-        <div class="title_container">{{notice.title}}</div>
+        <div class="title_container"><a href="{%url "notice:notice_detail" notice.pk %}">{{notice.title}}</a></div>
         <span class="date_container">{{notice.created_date|date:"Y.m.d" }}</span>
     </li>
     {% endfor %}
