--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,12 +1,235 @@
 body {
-   margin:0;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  margin: 0;
+  padding: 0;
+  font-size: 0.938rem;
+  line-height: 1.5;
+  word-break: keep-all;
+}
 }
 
-/* For desktop: */
 [class*="col-"] {
    float: center;
    padding: 15px;
 }
+
+header .nav_mobile{
+  position: fixed;
+  top:0;
+  left:0;
+  right:0;
+  background:#fff;
+  box-shadow: rgba(0,0,0,0.1) 0 2px 3px;
+  display: flex;
+  height: 49px;
+  z-index:200;
+}
+
+#nav_mobile_menu{
+  display:flex;
+  width: 49px;
+  height: 49px;
+  background:url('menu3.png') no-repeat;
+  background-size: 25px 25px;
+  background-position: center center;
+  flex-direction: row;
+  align-items: center;
+  z-index: 210;
+}
+.nav_mobile_menu_content{
+  display:none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0.78);
+  padding: 15px;
+  z-index:220;
+}
+
+.nav_mobile_menu_content_expend{
+  display: block;
+
+}
+.close_box{
+  float:right;
+  right:0;
+  top: 0;
+  width:50px;
+  height:50px;
+  align-items: center;
+  justify-content: center;
+
+}
+.close_btn{
+  float:right;
+  width:25px;
+  height: 25px;
+}
+
+.menu_wrap{
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 56px;
+    bottom: 0;
+    left: 0;
+    z-index: 300;
+    transition: 0.8s;
+    border: 1px solid rgba(0,0,0,0);
+}
+.menu{
+  position: fixed;
+  top: 0;
+  right: 1000px;
+  bottom: 0;
+  left: -1000px;
+  background: #fff;
+  z-index:230;
+}
+.menu_expend{
+  right:56px;
+  left:0;
+}
+
+#logo{
+  display:flex;
+  flex:1;
+  justify-content: center;
+  -webkit-box-pack: center;
+  margin:0;
+  margin-top:5px;
+  padding:0;
+  z-index:210;
+}
+
+
+.logo_img{
+  width: 80px;
+  height:40px;
+}
+
+.search_box{
+  display: flex;
+  width:50px;
+  height:50px;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.search_butten{
+   margin:1px;
+   vertical-align: top;
+   width: 25px;
+   height: 25px;
+   display:inline-flex;
+   position: relative;
+   z-index: 210;
+}
+
+
+.search_bar{
+  display:none;
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  z-index:400;
+  height:49px;
+  background: #fafafa;
+}
+.wrap_input{
+  overflow: hidden;
+  position: relative;
+  margin: 6px 56px 0 16px;
+  padding: 0 35px 0 5px;
+  height: 32px;
+  border: 1px solid rgba(0,0,0,0.08);
+  border-radius: 4px;
+  background: #fff;
+}
+.wrap_input input{
+  border: none;
+  background: none;
+  width: 100%;
+  height: 25px;
+  margin-top: 4.5px;
+  line-height: 20px;
+  font-size: 15px;
+  color: rgba(0,0,0,0.87);
+}
+.search_close_btn{
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 56px;
+  height: 44px;
+  border: none;
+  background: none;
+  font-size: 14px;
+  line-height: 44px;
+  color: rgba(0,0,0,0.87);
+}
+.recommend_list{
+  display: none;
+  position: fixed;
+  top: 49px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 300;
+  background: #fff;
+  text-align: center;
+
+}
+.recommend_list strong{
+  display: block;
+  margin: 46px 0 23px 0;
+  font-size: 20px;
+}
+.recommend_list ul{
+  list-style: none;
+  margin:0;
+  padding:0;
+}
+.recommend_list a{
+  display: block;
+  height: 36px;
+  font-size: 16px;
+  line-height: 36px;
+  color: rgb(37, 140, 231);
+  text-decoration: none;
+}
+
+
+/*js addclass*/
+.display_block{
+  display:block;
+}
+
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+}
+
+header .nav_mobile{
+
+}
+
+header .nav_desktop{
+  display:none;
+}
+
+
+/* For desktop: */
+@media only screen and (min-width: 768px) {
+
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
@@ -20,11 +243,8 @@ body {
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    [class*="col-"] {
-        width: 100%;
-    }
+
+
 }
 
 
@@ -54,15 +274,7 @@ body {
 }
 
 
-.profile_photo{
-   margin:1px;
-   vertical-align: top;
-   width: 43px;
-   height: 43px;
-   border-radius: 22px;
-   display:inline-flex;
-   position: relative;
-}
+
 
 .nav_dropdown{
    padding-right:50px;
@@ -80,24 +292,9 @@ body {
 }
 
 
-.dropdown-content {
-   font-size: 80%;
-   border-radius:10px;
-   display: none;
-   position: absolute;
-   right: 0;
-   background-color: #f9f9f9;
-   min-width: 160px;
-   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
+
+
 
 .dropdown:hover .dropdown-content {
     display: block;
