--- a/static/css/notice.css
+++ b/static/css/notice.css
@@ -1,6 +1,8 @@
 /*notice list*/
 .board_container{
    list-style: none;
+   padding-left: 20px;
+   padding-right:20px;
 }
 .head{
    background: #fafaf8;
