--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,6 @@ body {
   line-height: 1.5;
   word-break: keep-all;
 }
-}
 
 [class*="col-"] {
    float: center;
@@ -144,17 +143,16 @@ header .nav_mobile{
   background: #fafafa;
 }
 .wrap_input{
-  overflow: hidden;
   position: relative;
   margin: 6px 56px 0 16px;
-  padding: 0 35px 0 5px;
-  height: 32px;
+  padding: 0 0 0 5px;
+  min-height: 32px;
   border: 1px solid rgba(0,0,0,0.08);
   border-radius: 4px;
   background: #fff;
 }
 .wrap_input input{
-  border: none;
+  border-bottom: 1px solid #d4d4d4;
   background: none;
   width: 100%;
   height: 25px;
@@ -162,6 +160,15 @@ header .nav_mobile{
   line-height: 20px;
   font-size: 15px;
   color: rgba(0,0,0,0.87);
+}
+.tag_append{
+  display:inline-block;
+  border:none;
+  padding:none;
+  float:right;
+  background: none;
+  font-size: 14px;
+  height: 30px;
 }
 .search_close_btn{
   display: inline-block;
@@ -175,6 +182,10 @@ header .nav_mobile{
   font-size: 14px;
   line-height: 44px;
   color: rgba(0,0,0,0.87);
+}
+#tag_box{
+  width:100%;
+  height: 50px;
 }
 .recommend_list{
   display: none;
@@ -205,6 +216,46 @@ header .nav_mobile{
   line-height: 36px;
   color: rgb(37, 140, 231);
   text-decoration: none;
+}
+
+.autocomplete {
+  /*the container must be positioned relative:*/
+  position: relative;
+  display: inline-block;
+  width:250px;
+}
+input {
+  padding: 10px;
+  font-size: 16px;
+}
+input[type=text] {
+  width: 100%;
+  border:none;
+}
+.autocomplete-items {
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
 
 
