--- a/tapas1/templates/base2.html
+++ b/tapas1/templates/base2.html
@@ -17,7 +17,7 @@
 
     <!--mycss-->
     {% block style_css %}{% endblock %}
-    <link href="{%static "css/base.css" %}?ver=1.23" rel="stylesheet">
+    <link href="{%static "css/base.css" %}?ver=1.24" rel="stylesheet">
 
 
     <!--Import Google Icon Font-->
@@ -83,8 +83,17 @@
         </div>
           <div class="menu_wrap">
             <div class="menu">
-              <div class="top"></div>
-              <div class="scroll"></div>
+              <div class="top">
+                <div class="member">
+                  <div class="mem">
+                    <span class="pic" style="background:url({{ request.user.profile.image.url }}) 50% 50% no-repeat;"></span>
+                    <p class="pro_nick">{{ request.user.profile.nickname }}</p>
+                  </div>
+                </div>
+              </div>
+              <div class="scroll">
+
+              </div>
             </div>
           </div>
         <h1 id="logo">
